# test_ci_repo

./: README.md  pyproject.toml
.github/workflows/: ci.yml  github-actions-demo.yml
my_package/: divide.py
my_package/tests/: test_divide.py
